--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,22 @@ wheels/
 *.egg-info
 
 # Virtual environments
+uv.lock
 .venv
+
+# package
+*.spec
+scripts/uv
+
+dist*.zip
+
+# dataset
+ds/
+
+# output
+out.csv
+output/
+
+# test
+tests
+docker
