--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,27 @@
 [project]
-name = "ntpy"
-version = "0.1.0"
+name = "nt25"
+version = "1.0.0"
 description = "Neo's Tools of Python"
 readme = "README.md"
-requires-python = ">=3.13"
-dependencies = []
+requires-python = ">=3.10"
+dependencies = [
+    "pillow>=11.3.0",
+    "requests>=2.32.5",
+    "pyinstaller>=6.16.0",
+]
 
 [project.scripts]
-ntpy = "ntpy.main:main"
+ex = "nt25.lib.exif:main"
+mt = "nt25.mt:main"
+pgogs = "nt25.pgogs:main"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.sdist]
+only-include = ["src", "tests"]
+
+[tool.ruff]
+line-length = 88
+indent-width = 2
