fixed jpeg fill bytes and heic reader in array

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,13 @@
 {
-  "cSpell.words": ["bfunc", "ftypheic", "piexif"]
+  "cSpell.words": [
+    "bfunc",
+    "ftypheic",
+    "iinf",
+    "infe",
+    "ipco",
+    "iprp",
+    "ispe",
+    "jfif",
+    "piexif"
+  ]
 }
